--- a/content/blog/2017-09-07-dissecting-euro-football-transfers.Rmd
+++ b/content/blog/2017-09-07-dissecting-euro-football-transfers.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "Unravelling the European football transfer window"
-description: "Scraping data on 2017 football transfers and following the money trails."
+description: "Scraping data on 2017/18 football transfers and following the money trails."
 date: "2017-09-07"
-tags: ["r", "football", "scraping"]
+tags: ["r", "football"]
+keywords: ["web scraping", "r", "football", "transfers"]
 slug: unravelling-euro-football-transfer-window
 draft: no
 ---
@@ -10,16 +11,17 @@ draft: no
 ```{r setup, include=FALSE}
 
 # markdown setup
-knitr::opts_chunk$set(cache=TRUE, echo = TRUE, warning = FALSE, message = FALSE, out.width = '100%')
+knitr::opts_chunk$set(cache=FALSE, echo = FALSE, warning = FALSE, message = FALSE, out.width = '100%')
 
 # load pkgs for session
 library(jsonlite)
 library(tidyverse)
 library(lubridate)
 library(forcats)
+library(hrbrthemes)
 library(ewenthemes)
 library(scales)
-library(ggjoy)
+library(ggridges)
 library(ggraph)
 library(igraph)
 
@@ -27,15 +29,11 @@ library(igraph)
 
 Followers of European football will be familiar with the infamous transfer window system, which endears clubs to buy and sell players in a specified period - once in the off-season (summer), and once at the turn of each calendar year. This constraint has invited increasingly peculiar and precarious market activity over the years, as clubs vie to secure the hottest new talents with varying parts method and madness. Meanwhile, fans lap up newspaper gossip columns and tell friends "he looks quality on YouTube" as they frantically research the latest "wunderkind"  their club has been linked with. It's a truly beguiling collection of rituals and rhetoric (that I helplessly pander to each year). 
 
-```{r regulate pic, echo = FALSE, out.width = "75%", fig.align = "center"}
-knitr::include_graphics("/img/2017-09-07-Dissecting_European_Football_Transfers/regulate.png")
-```
+![](/blog/2017-09-07-dissecting-euro-football-transfers_files/regulate.png){width=75%}
 
 The off-season transfer window closed shut recently, on August 31st across Germany, England, France and Italy. Spain got given slightly longer to finish their business, until the 1st September (a bizarre quirk that is befitting of such a madcap period). As a follower of (English) Premier League football, primarily, the way in which media outlets stoke up the tension here as the window draws to a close really has to be seen to be believed. Chief culprits include Sky Sports, who's latest excruciating move in drama marginal gains includes presenters coordinating the colour of their clothes with the canary yellow news ticker on their rolling TV coverage of the window's 'deadline day' (caption competition, indeed).
 
-```{r ssn pic, echo = FALSE, out.width = "75%", fig.align = "center"}
-knitr::include_graphics("/img/2017-09-07-Dissecting_European_Football_Transfers/jimwhite.jpg")
-```
+![](/blog/2017-09-07-dissecting-euro-football-transfers_files/jimwhite.jpg){width=75%}
 
 Behind this cacophony of noise, what actually went down in the window? Hopefully, a proper look at the data can help reveal some truths and help me scratch this particular itch.[^fullcode]
 
@@ -43,8 +41,9 @@ Behind this cacophony of noise, what actually went down in the window? Hopefully
 
 In early skirmishes with transfer window data, I had managed to scrape [Transfermarkt's](https://www.transfermarkt.co.uk/) site for player transfer data and produced some neat dumbbell-style plots that people seemed to get on with.
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Premier league clubs&#39; summer transfer bizniz (as of today). Idea inspired by <a href="https://twitter.com/Worville">@Worville</a>, execution by <a href="https://twitter.com/hrbrmstr">@hrbrmstr</a>. <a href="https://t.co/upHFzegZ1H">pic.twitter.com/upHFzegZ1H</a></p>&mdash; ewen (@ewen_) <a href="https://twitter.com/ewen_/status/895930106908221440">August 11, 2017</a></blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+```{r echo=FALSE}
+blogdown::shortcode('tweet', '895930106908221440')
+```
 
 These nicely illustrated intra-league transfer window behaviour, highlighting big buyers and sellers (as well as club's balances) relative to the league itself. One feature that may go unnoticed is the ranking of the y-axis - the clubs have been ordered by their final league position in the previous season (with the promoted clubs at the bottom). This decision means that clubs are proximal to others who demonstrated similar league performance (a reasonable proxy for team quality), and spend information can be compared non-arbitrarily in this way.
 
@@ -52,7 +51,7 @@ However, there wasn't any kind of time-stamp present in Transfermarkt's collatio
 
 Luckily for me, the Guardian ran a [transfer window interactive](https://www.theguardian.com/football/ng-interactive/2017/jun/22/transfer-window-2017-every-deal-in-europes-top-five-leagues) that included information about *when* transfers happened. A quick `jsonlite`/`lubridate`/`dplyr`/`forcats` combo is all I needed to grab, parse and clean the data for my purposes (remember to head for the footnotes if you want the code relief).
 
-```{r guardian scrape, echo=FALSE}
+```{r guardian scrape}
 
 # load packages
 library(jsonlite)
@@ -88,14 +87,14 @@ With that, the temporal aspect of the transfer window is ours.
 
 As mentioned earlier, there is a perceived high-stakes end to the window here in England, possibly fuelled by sensationalist third-parties in the media (among other factors). Given that the other major European leagues find their opportunities for business cut off at the same time, is there a widespread spike in business as the deadline approaches?
 
-```{r league joyplot, echo=FALSE}
+```{r league joyplot}
 # filter new league as big 5 and transfer has a fee attached
 transfers %>%
   filter(new_league %in% c("Premier League", "Serie A", "La Liga", "Bundesliga", "Ligue 1"),
          transfer_type %in% c("fee", "undisclosed fee")) %>%
   # joy plot
   ggplot(aes(x=date, y=new_league)) +
-  geom_joy(fill="#85144B", alpha=0.8) +
+  geom_density_ridges(fill="#85144B", alpha=0.8) +
   # thematic elements
   labs(title="When did teams in the big five leagues buy new players?",
        subtitle= "Distribution of European football transfer window activity in 2017\n(permanent transfers only).",
@@ -111,13 +110,13 @@ We see the biggest peak in player buys, across all leagues, comes around the sta
 
 Another component is that of the loan market, which is a different beast - essentially, club's (usually those less esteemed) borrowing players from another club, usually for a season. It may be that a league's behaviour in this market differs from full transfers.
 
-```{r loans, echo=FALSE}
+```{r loans}
 transfers %>%
   filter(new_league %in% c("Premier League", "Serie A", "La Liga", "Bundesliga", "Ligue 1"),
          transfer_type %in% c("fee", "loan")) %>%
   # joy plot
   ggplot(aes(x=date, y=new_league)) +
-  geom_joy(aes(fill=transfer_type), alpha=0.8) +
+  geom_density_ridges(aes(fill=transfer_type), alpha=0.8) +
   # thematic elements
   labs(title="How did the loan market differ from permanent transfers?",
        x=NULL, y=NULL,
@@ -136,12 +135,16 @@ Ah - now we see what the other leagues were up to, closer to the deadline. It's 
 
 We have an idea of the deadline day effect in transfer activity terms, but haven't yet delved into the finances. I'm dying to know just how much business is left until those final hours.[^disclosed]
 
-```{r deadline prop, echo=FALSE}
+```{r deadline prop}
 
 # deadline
-transfers <- mutate(transfers,
-                    deadline_day=if_else(new_league %in% c("Premier League", "Serie A", "Bundesliga", "Ligue 1") & date >= "2017-08-31", TRUE, 
-                                         if_else(new_league == "La Liga" & date >= "2017-09-01", TRUE, FALSE)))
+transfers <- mutate(
+  transfers,
+  deadline_day=if_else(
+    new_league %in% c("Premier League", "Serie A", "Bundesliga", "Ligue 1") & date >= "2017-08-31", 
+    TRUE, if_else(new_league == "La Liga" & date >= "2017-09-01", TRUE, FALSE)
+    )
+  )
 
 # deadline day spend
 transfers %>%
@@ -173,7 +176,7 @@ Huh. While over 13% of all transfer spend by the Premier League is done on the f
 
 There are usually some headline-grabbing moves made each summer, and this one got a bit silly. Neymar moved to Paris Saint Germain for £197 million, with fears about inequality in spending power reaching fever pitch. 
 
-```{r league prop, echo=FALSE}
+```{r league prop}
 
 transfers %>%
   filter(new_league %in% c("Premier League", "Serie A", "La Liga", "Bundesliga", "Ligue 1"),
@@ -206,7 +209,7 @@ This doesn't tell the full story - Neymar actually moved from Barca to PSG, so a
 
 Speaking of in's and out's, working with flow data lends itself nicely to some network visualisation. I've banged on about who's spending money, but what does this web of business look like?
 
-```{r flows, echo=FALSE}
+```{r flows}
 
 # make a transfer flows df for pl
 flows <- transfers %>%
